frontend/tests/cases/negative/poly.gr
idBad : ∀ {a : Type} . a → a
idBad = \(x : Int) → x
